from enum import Enum


class TypeFichierCpp(Enum):
    HEADER = "HEADER"
    SOURCE = "SOURCE"
