from enum import Enum


class TypeRelationCpp(Enum):
    ASSOCIATION = "ASSOCIATION"
    DEPENDANCE = "DEPENDANCE"
    AGREGATION = "AGREGATION"
